- editor list item spacing button - clickable ingredient fix (after changing amount)

--- a/web/app/themes/Foody/resources/sass/common/_content.scss
+++ b/web/app/themes/Foody/resources/sass/common/_content.scss
@@ -5,6 +5,10 @@
     font-family: $font__assistant;
   }
 
+  .foody-list-item-spacing{
+    margin-bottom: 1em;
+  }
+
   // Removed To Fix new line issue on posts
   //p:last-of-type{
   //  margin-bottom: 0;
